--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.0-nullsafety.3
   path: ^1.8.3
   liquid_pull_to_refresh: ^3.0.1
+  shared_preferences: ^2.2.0
+  flutter_riverpod: ^2.3.6
+  riverpod_annotation: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +54,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  riverpod_generator: ^2.2.4
+  build_runner: ^2.4.6
+  custom_lint: ^0.4.0
+  riverpod_lint: ^1.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
